# codexporter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  codexporter-session-discovery-fix-proposal-2026-03-28.md  codexporter-windows-post-refactor-validation-bug-report-2026-04-03.md  codexporter-windows-test-suite-bug-report-2026-03-19.md  codexporter-windows-test-suite-fix-proposal-2026-03-19.md  pyproject.toml
.github/: CODEOWNERS
docs/spec/: 01_product_triage.md  02_user_stories.md  03_product_definition.md  04_assumptions_and_constraints.md  05_open_questions_and_next_steps.md  06_supported_environments.md  07_export_data_contract.md  08_artifact_structure_and_naming.md  09_checkpoint_behavior.md  10_degraded_mode_behavior.md  11_post_v1_deferrals.md  12_checkpoint_sidecar_schema.md  13_acceptance_criteria.md  14_test_scenarios.md  15_markdown_rendering_rules.md  16_user_journeys.md  17_user_flows.md  18_user_story_mapping.md  19_user_side_acceptance_criteria.md  20_test_taxonomy.md  21_coverage_matrix.md  22_platform_validation.md  23_engineering_policy.md  24_installation_and_distribution.md  25_export_length_analysis.md  26_compact_mode_readiness.md  27_compact_mode_definition.md  28_no_any_rollout.md
docs/validation/: linux_cli.md  macos_app.md  macos_cli.md  windows_app.md  windows_cli.md
skills/codexporter/: SKILL.md
skills/codexporter/codexporter/: cli.py  errors.py  renderer.py  rollout_parser.py  session_store.py
skills/codexporter/codexporter_skill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skills/export/: SKILL.md
skills/export/codexporter/: __init__.py  checkpoint.py  cli.py  compaction.py  json_utils.py  messages.py  models.py  renderer.py  rollout_parser.py  service.py  session_store.py
tests/: conftest.py  test_checkpoint_edges.py  test_cli_contracts.py  test_compact_mode.py  test_degraded_mode.py  test_exporter.py  test_fixture_rendering.py  test_full_flow.py  test_session_selection.py  test_shell_command_compaction.py  test_spec_coverage.py  test_unit_contracts.py
(+5 files in other folders)
